--- a/E1.31.md
+++ b/E1.31.md
@@ -1,4 +1,6 @@
-The E1.31 Streaming ACN protocol is a lighting control protocol used by many lighting controllers.  It implements a form of DMX512 over Ethernet.  It can be used to drive RGB addressable LED strips via a number of open source controller firmwares such as ESPixelStick.
+The E1.31 Streaming ACN protocol is a lighting control protocol used by many lighting controllers.  It implements a form of DMX512 over Ethernet.  It can be used to drive RGB addressable LED strips via a number of open source controller firmwares such as ESPixelStick and WLED.
+
+OpenRGB uses libe131 by hhromic for E1.31: https://github.com/hhromic/libe131
 
 OpenRGB can send E1.31 packets to control these devices.  Since E1.31 does not provide an autodetection mechanism, E1.31 devices must be configured in a configuration file called e131.txt, placed in the same directory as the OpenRGB executable file.
 
