--- a/E1.31.md
+++ b/E1.31.md
@@ -18,3 +18,21 @@ e131_device_end
 ```
 
 This configuration creates a device called "Window Lights" on universe 6 that starts at channel 1 and contains 25 RGB LEDs, with byte order R, G, B.  This zone is considered a linear zone for effects.  At the moment, the RGB order is unimplemented and output will be R, G, B regardless of this setting.  Devices with more than 512 channels in use (3 channels per LED) will automatically roll over to the next universe.
+
+# Matrix Configuration
+
+You can configure an E1.31 device as an LED matrix.  Matrix configuration is done by adding these parameters to your E1.31 device entry.
+
+| Parameter     | Value                   |
+| ------------- | ----------------------- |
+| matrix_width  | Width of matrix         |
+| matrix_height | Height of matrix        |
+| matrix_order  | One of the following:   |
+|               | HORIZONTAL_TOP_LEFT     |
+|               | HORIZONTAL_TOP_RIGHT    |
+|               | HORIZONTAL_BOTTOM_LEFT  |
+|               | HORIZONTAL_BOTTOM_RIGHT |
+|               | VERTICAL_TOP_LEFT       |
+|               | VERTICAL_TOP_RIGHT      |
+|               | VERTICAL_BOTTOM_LEFT    |
+|               | VERTICAL_BOTTOM_RIGHT   |
