--- a/E1.31.md
+++ b/E1.31.md
@@ -36,3 +36,7 @@ You can configure an E1.31 device as an LED matrix.  Matrix configuration is don
 |               | VERTICAL_TOP_RIGHT      |
 |               | VERTICAL_BOTTOM_LEFT    |
 |               | VERTICAL_BOTTOM_RIGHT   |
+
+The matrix_order parameter determines where the matrix starts.  For example, a matrix wired in the layout below would use HORIZONTAL_TOP_LEFT as the strips are horizontal and the controller connects at the top left.
+
+![image](uploads/4c7dbfae2fc76675ef1617acf46f52e1/image.png)
