--- a/E1.31.md
+++ b/E1.31.md
@@ -19,6 +19,18 @@ e131_device_end
 
 This configuration creates a device called "Window Lights" on universe 6 that starts at channel 1 and contains 25 RGB LEDs, with byte order R, G, B.  This zone is considered a linear zone for effects.  At the moment, the RGB order is unimplemented and output will be R, G, B regardless of this setting.  Devices with more than 512 channels in use (3 channels per LED) will automatically roll over to the next universe.
 
+# Basic Configuration
+
+| Parameter         | Description                                                                                                   |
+| ----------------- | ------------------------------------------------------------------------------------------------------------- |
+| e131_device_start | Starts an E1.31 device entry.  The line immediately after this must be the device name                        |
+| num_leds          | Number of LEDs connected to the device                                                                        |
+| start_universe    | E1.31 universe of the first LED on the device                                                                 |
+| start_channel     | E1.31 channel of the first LED on the device                                                                  |
+| type              | SINGLE - treated as a single LED zone, which tells effects engines to generate a single color for this device |
+|                   | LINEAR - treated as a one-dimensional strip                                                                   |
+|                   | MATRIX - treated as a two-dimensional matrix - see Matrix Configuration section below                         |
+
 # Matrix Configuration
 
 You can configure an E1.31 device as an LED matrix.  Matrix configuration is done by adding these parameters to your E1.31 device entry.
