--- a/E1.31.md
+++ b/E1.31.md
@@ -30,6 +30,8 @@ This configuration creates a device called "Window Lights" on universe 6 that st
 | type              | SINGLE - treated as a single LED zone, which tells effects engines to generate a single color for this device |
 |                   | LINEAR - treated as a one-dimensional strip                                                                   |
 |                   | MATRIX - treated as a two-dimensional matrix - see Matrix Configuration section below                         |
+| rgb_order         | Byte order of the colors.  Options: RGB, RBG, GRB, GBR, BRG, BGR (not implemented yet, output always RGB)     |
+| e131_device_end   | Ends an E1.31 device entry.                                                                                   |
 
 # Matrix Configuration
 
