--- a/E1.31.md
+++ b/E1.31.md
@@ -1,8 +1,16 @@
-The E1.31 Streaming ACN protocol is a lighting control protocol used by many lighting controllers.  It implements a form of DMX512 over Ethernet.  It can be used to drive RGB addressable LED strips via a number of open source controller firmwares such as ESPixelStick and WLED.
+The E1.31 Streaming ACN protocol is a lighting control protocol used by many lighting controllers.  It implements a form of DMX512 over Ethernet.  It can be used to drive RGB LED lights.  The type of light depends on the device.  The E1.31 protocol is commonly used for LED strip controllers.
+
+Here is a list of a few E1.31 open source firmware projects that will work with OpenRGB:
+
+  * ESPixelStick: https://github.com/forkineye/ESPixelStick
+  * WLED: https://github.com/Aircoookie/WLED
+  * Espurna (E1.31 support in my fork): https://github.com/CalcProgrammer1/espurna/tree/calc-dev
 
 OpenRGB uses libe131 by hhromic for E1.31: https://github.com/hhromic/libe131
 
-OpenRGB can send E1.31 packets to control these devices.  Since E1.31 does not provide an autodetection mechanism, E1.31 devices must be configured in a configuration file called e131.txt, placed in the same directory as the OpenRGB executable file.
+# Setup
+
+OpenRGB provides an E1.31 controller to drive these devices.  Since E1.31 does not provide an autodetection mechanism, E1.31 devices must be configured in a configuration file called e131.txt, placed in the same directory as the OpenRGB executable file.  Multiple device entries are allowed, though you should make sure the universe/channel configuration of the devices do not overlap.
 
 The format of an E1.31 device entry should match the following example:
 
