--- a/E1.31.md
+++ b/E1.31.md
@@ -10,19 +10,23 @@ OpenRGB uses libe131 by hhromic for E1.31: https://github.com/hhromic/libe131
 
 # Setup
 
-OpenRGB provides an E1.31 controller to drive these devices.  Since E1.31 does not provide an autodetection mechanism, E1.31 devices must be configured in a configuration file called e131.txt, placed in the same directory as the OpenRGB executable file.  Multiple device entries are allowed, though you should make sure the universe/channel configuration of the devices do not overlap.
+OpenRGB provides an E1.31 controller to drive these devices.  Since E1.31 does not provide an autodetection mechanism, E1.31 devices must be configured in the OpenRGB configuration file.  Multiple device entries are allowed, though you should make sure the universe/channel configuration of the devices do not overlap.
 
 The format of an E1.31 device entry should match the following example:
 
 ```
-e131_device_start
-Window Lights
-num_leds=25
-start_channel=1
-start_universe=6
-rgb_order=RGB
-type=LINEAR
-e131_device_end
+    "E131Devices": {
+        "devices": [
+            {
+                "name": "ESPixelStick 0 (Window)",
+                "num_leds": 25,
+                "rgb_order": "RGB",
+                "start_channel": 1,
+                "start_universe": 100,
+                "type": "LINEAR"
+            }
+         ]
+      }
 ```
 
 This configuration creates a device called "Window Lights" on universe 6 that starts at channel 1 and contains 25 RGB LEDs, with byte order R, G, B.  This zone is considered a linear zone for effects.  At the moment, the RGB order is unimplemented and output will be R, G, B regardless of this setting.  Devices with more than 512 channels in use (3 channels per LED) will automatically roll over to the next universe.
