--- a/E1.31.md
+++ b/E1.31.md
@@ -35,7 +35,7 @@ This configuration creates a device called "Window Lights" on universe 6 that st
 
 | Parameter         | Description                                                                                                   |
 | ----------------- | ------------------------------------------------------------------------------------------------------------- |
-| e131_device_start | Starts an E1.31 device entry.  The line immediately after this must be the device name                        |
+| name              | String, device name                                                                     |
 | num_leds          | Number of LEDs connected to the device                                                                        |
 | start_universe    | E1.31 universe of the first LED on the device                                                                 |
 | start_channel     | E1.31 channel of the first LED on the device                                                                  |
