--- a/E1.31.md
+++ b/E1.31.md
@@ -44,7 +44,7 @@ This configuration creates a device called "Window Lights" on universe 6 that st
 |                   | MATRIX - treated as a two-dimensional matrix - see Matrix Configuration section below                         |
 | rgb_order         | Byte order of the colors.  Options: RGB, RBG, GRB, GBR, BRG, BGR (not implemented yet, output always RGB)     |
 | keepalive_time    | If non-zero, this will continuously output the E1.31 output at the given rate.  Value in milliseconds.        |
-| e131_device_end   | Ends an E1.31 device entry.                                                                                   |
+| ip                 | String, IP address of E1.31 device.  If IP is provided, unicast mode is used for this device.  If IP is not provided, multicast mode is used.                                                                                   |
 
 # Matrix Configuration
 
