--- a/E1.31.md
+++ b/E1.31.md
@@ -10,7 +10,7 @@ OpenRGB uses libe131 by hhromic for E1.31: https://github.com/hhromic/libe131
 
 # Setup
 
-OpenRGB provides an E1.31 controller to drive these devices.  Since E1.31 does not provide an autodetection mechanism, E1.31 devices must be configured in the OpenRGB configuration file.  Multiple device entries are allowed, though you should make sure the universe/channel configuration of the devices do not overlap.
+OpenRGB provides an E1.31 controller to drive these devices.  Since E1.31 does not provide an autodetection mechanism, E1.31 devices must be configured in the OpenRGB configuration file.  Multiple device entries are allowed, though you should make sure the universe/channel configuration of the devices do not overlap when using multicast mode.  Devices which share one or more universes will be merged into a single group device, with the individual device configurations exposed as zones.
 
 The format of an E1.31 device entry should match the following example:
 
